# antagonistic-collab

./: .gitignore  CHATLOG.md  CLAUDE.md  CURRENT_STATE.md  DECISIONS.md  LESSONS_LEARNED.md  PLANNING.md  README.md  REPORT.md  ROADMAP.md  SCRATCHPAD.md  TASKS.md  WRITEUP.md  __init__.py  __main__.py  debate_protocol.py  epistemic_state.py  pyproject.toml  requirements.txt  runner.py  validate_m10_live.py  validate_m12_live.py  validate_m6.py  validate_m6_live.py
New Ideas/: Reflections_M17.md  tomgriffits.md
Notes/: CHATLOG.md  DECISIONS.md  FEATURES.md  LESSONS_LEARNED.md  PLANNING.md  README.md  REPORT.md  SCRATCHPAD.md  TASKS.md  WRITEUP.md  arbiter_comparison.html  arbiter_comparison_categorization_only.html  writeup_adversarial.md  writeup_hybrid_llm_compute.md  writeup_oed.md
Notes/Learnables/: posterior_collapse_tempering_vs_noise.md
Notes/archive/: CHATLOG.md  DECISIONS.md  FEATURES.md  INDEX.md  LESSONS_LEARNED.md  REPORT.md  TASKS.md  WRITEUP.md
antagonistic_collab/: __init__.py  __main__.py  bayesian_selection.py  config.py  debate_protocol.py  default_config.yaml  demo.py  epistemic_state.py  experiment.py  ridea.py  runner.py
antagonistic_collab/models/: __init__.py  (+12 more)
experiments/: debate_ablation.yaml  debate_no_arbiter.yaml  rerun_greedy_debate_rulex.yaml
models/: __init__.py  category_structures.py  gcm.py
scripts/: m15_mimicry_sweep.py  plot_ablation.py
tests/: test_bugfixes.py  test_codex_fixes.py  test_decision_agents.py  test_decision_debate.py  test_decision_eig.py  test_decision_models.py  test_likelihood_tempering.py  test_ridea.py
(+15 files in other folders)
