[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "antagonistic-collab"
version = "0.1.0"
description = "Automated adversarial scientific debate for theory advancement"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "anthropic>=0.30",
]

[project.optional-dependencies]
autora = [
    "autora",
    "autora[experimentalist-falsification]",
    "autora[experimentalist-model-disagreement]",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["antagonistic_collab*"]
